--- a/index.html
+++ b/index.html
@@ -4,9 +4,30 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="WDD 231 - Dynamic Web Fundamentals by Ramon Andrade - My first web page">
+    <meta name="description" content="WDD 231 - Ramon Andrade">
     <meta name="author" content="Ramon Andrade">
-    <title>WDD 231 - Dynamic Web Fundamentals - Ramon Andrade</title>
+    <title>WDD 231 - Ramon Andrade</title>
+    <meta property="og:title" content="Apple">
+    
+    <!-- Google Meta Tags -->
+    <meta name="google-site-verification" content="your-google-verification-code">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://ramondandrade.github.io">
+    <meta property="og:image" content="https://ramondandrade.github.io/images/profile.webp">
+    <meta property="og:description" content="WRamon Andrade Website Project's for WDD 231 - BYU Pathway">
+    <meta property="og:site_name" content="WDD 231 - Ramon Andrade">
+    <meta property="og:title" content="WDD 231 - Ramon Andrade">
+    <meta property="og:locale" content="en_US">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://ramondandrade.github.io">
+    <meta name="twitter:title" content="WDD 231 - Ramon Andrade">
+    <meta name="twitter:description" content="Ramon Andrade Website Project's for WDD 231 - BYU Pathway">
+    <meta name="twitter:image" content="https://ramondandrade.github.io/images/profile.webp">
+
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap">
     <link rel="stylesheet" href="styles/small.css">
     <link rel="stylesheet" href="styles/large.css">
